# OOGGA

./: .gitignore  OOGGA.py  README.md  eval_frags.py  pyproject.toml
.github/workflows/: publish.yml
lib/: README
oogga/: __init__.py  cli.py  core.py  eval_cli.py
